Fixed stylesheet to align border with image.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     margin: auto;
     margin-top: 0.7%;
     padding-right: 0.5%;
+    padding-bottom: 2.2%;
     border: 3px solid #000000;
 }
 .wrap {
@@ -45,6 +46,6 @@ h2, p {
     border: black 2px solid;
     position: absolute;
     width: 30%;
-    left: 69.5%;
+    left: 70%;
     top: -0.5%;
 }
